Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,20 @@ header {
   z-index: 2;
 }
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5){
+
+  html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
+}
+
 @media (max-width: 1200px) {
   header {
     width: 100%;
